# ai-devs-2

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
ai_devs_2/tasks/: settings.py
ai_devs_2/tasks/task_4_1/: main.py
ai_devs_2/tasks/tasks_1/task_1/: main.py
ai_devs_2/tasks/tasks_1/task_4_2/: main.py
ai_devs_2/tasks/tasks_1/task_5_4/: main.py
ai_devs_2/tasks/tasks_2/tasks_2_1/: main.py
ai_devs_2/tasks/tasks_2/tasks_3_1/: main.py
ai_devs_2/tasks/tasks_2/tasks_4_1/: main.py
ai_devs_2/tasks/tasks_2/tasks_5_1/: main.py
ai_devs_2/tasks/tasks_3/tasks_1_1/: main.py
ai_devs_2/tasks/tasks_3/tasks_3_1/: main.py
ai_devs_2/tasks/tasks_3/tasks_4_1/: create_postgres_table.py  fill_data_to_dbs.py  main.py  models.py
ai_devs_2/tasks/tasks_3/tasks_5_2/: fill_data_to_dbs.py  local_settings_ai.py  main.py  models.py  postgres_models.py
ai_devs_2/tasks/tasks_4/tasks_1_1/: main.py
ai_devs_2/tasks/tasks_4/tasks_2_1/: main.py
ai_devs_2/tasks/tasks_4/tasks_3_1/: main.py
ai_devs_2/tasks/tasks_4/tasks_4_1/: main.py
ai_devs_2/tasks/tasks_4/tasks_5_1/: main.py
ai_devs_2/tasks/tasks_5/tasks_1_1/: main.py
ai_devs_2/tasks/tasks_5/tasks_2_1/: main.py
ai_devs_2/tasks/tasks_5/tasks_3_1/: main.py
ai_devs_2/tasks/tasks_5/tasks_4_1/: main.py
