[tool.poetry]
name = "ai-devs-2"
version = "0.1.0"
description = "Project for ai-devs-2 course"
authors = ["Michal Wodynski <mi-com-biuro@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
requests = "2.31.0"
openai = "^1.2.3"
tenacity = "^8.2.3"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
sqlalchemy-utils = "^0.41.1"
qdrant-client = "1.6.4"
pydantic = "^2.4.2"
fastembed = "^0.1.1"
thefuck = "^3.32"

[tool.poetry.group.dev.dependencies]
ptipython = "1.0.1"
python-dotenv = {version = "1.0.0", extras = ["cli"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
